---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() -> pub bool {
    let a: [[&mut bool; 1]; 2] = [[&mut false], [&mut true]];
    if *a[if *a[1][0] { 0 } else { 1 }][0] {
        true
    } else {
        false
    }
}
